--- a/action.yml
+++ b/action.yml
@@ -193,8 +193,8 @@ runs:
           || steps.wp_cli.outputs.path
         }}' core install \
             --path=${{ inputs.installation_path }} \
-            --url=${{ inputs.installation_host }} \
-            --title=${{ inputs.wordpress_title }} \
+            --url='${{ inputs.installation_host }}' \
+            --title='${{ inputs.wordpress_title }}' \
             --admin_user='${{ github.actor }}' \
             --admin_email='${{ github.actor }}@github.com' \
             --skip-email \
